--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -16,7 +16,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		{% block title %}<title>My amazing site</title>{% endblock %}
+		{% block title %}<title>My aaamazing site</title>{% endblock %}
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 
