--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 
-{% block title %}İndex Sayfası{% endblock %}
+{% block title %} {{ setting.title }} {% endblock %}
+{% block keywords %} {{ setting.keywords }} {% endblock %}
+{% block description %} {{ setting.description }} {% endblock %}
 
+{% block head %}
+    <link rel='shortcut icon' type='image/x-icon' href='{{setting.icon.url}}' />
+{% endblock %}
 
 {% block header %}
     {% include "header.html" %}
 {% endblock %}
-
 
 
 {% block slider %}
