--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -12,7 +12,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		{% block title %}<title>My aaamazingggg site</title>{% endblock %}
+		{% block title %}<title>Rent Your Car </title>{% endblock %}
 		<meta name="keywords" content="{% block keywords %} Anasayfa Anahtar Kelimeler {% endblock %}">
 		<meta name="description" content="{% block description %} Anasayfa Kısa Açıklamalar {% endblock %}">
 
