--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -26,12 +26,12 @@
 
 				          <li class="menu-active"><a href="/">Home</a></li>
 				          <li><a href="/about">About</a></li>
-				          <li><a href="service.html">Service</a></li>
-				          <li><a href="team.html">Team</a></li>
-				          <li><a href="blog-home.html">Blog</a></li>
 				          <li><a href="/contact">Contact</a></li>
+						  <li><a href="/sss">SSS</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->
 			    	</div>
 			    </div>
+
 			  </header><!-- #header -->
+
