--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -1,4 +1,85 @@
 {% load static %}
+{% block head %}
+
+
+<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Hind:400,700" rel="stylesheet">
+<!-- Bootstrap -->
+			<link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+
+	<!-- Slick -->
+			<link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %}" />
+			<link type="text/css" rel="stylesheet" href="{% static 'css/slick-theme.css' %}" />
+
+	<!-- nouislider -->
+			<link type="text/css" rel="stylesheet" href="{% static 'css/nouislider.min.css' %}" />
+
+	<!-- Custom stlylesheet -->
+			<link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}" />
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
+
+<!-- jQuery Plugins -->
+			<script src="{% static 'js/jquery.min.js' %}"></script>
+			<script src="{% static 'js/bootstrap.min.js' %}"></script>
+			<script src="{% static 'js/slick.min.js' %}"></script>
+			<script src="{% static 'js/nouislider.min.js' %}"></script>
+			<script src="{% static 'js/jquery.zoom.min.js' %}"></script>
+			<script src="{% static 'js/main.js' %}"></script>
+
+
+<link rel='shortcut icon' type='image/x-icon' href='{{setting.icon.url}}' />
+{% endblock %}
+
+<div class="pull-left">
+<div class="header-search">
+	<br><br>
+	<form action="/search/" method="post">
+		{% csrf_token %}
+		<input name="query" class="input search-input" type="text" placeholder="Enter your keyword">
+		<button class="search-btn"><i class="fa fa-search"></i></button>
+	</form>
+
+
+
+</div>
+	<!-- Account -->
+						<li class="header-account dropdown default-dropdown">
+							{% if user.id is not None %}
+							<div class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true">
+								<div class="header-btns-icon">
+									<i class="fa fa-user-o"></i>
+								</div>
+								<strong class="text-uppercase">{{ user.first_name }} <i class="fa fa-caret-down"></i></strong>
+							</div>
+							{% else %}
+							<a href="/login/" class="text-uppercase">Login</a> / <a href="/signup/" class="text-uppercase">Sign Up</a>
+							{% endif %}
+							<ul class="custom-menu">
+								<li><a href="/user"><i class="fa fa-user-o"></i> My Account</a></li>
+								<li><a href="#"><i class="fa fa-exchange"></i> My Bookings</a></li>
+								<li><a href="/user/comments"><i class="fa fa-check"></i> My Comments</a></li>
+								<li><a href="/logout/"><i class="fa fa-unlock-alt"></i> Logout</a></li>
+							</ul>
+						</li>
+						<!-- /Account -->
+
+
+
+
+</div>
+
+
 
 <!-- Start model Area -->
 			<section class="model-area section-gap" id="cars">
@@ -6,9 +87,7 @@
 					<div class="row d-flex justify-content-center pb-40">
 						<div class="col-md-8 pb-40 header-text">
 							<h1 class="text-center pb-10">Choose your Desired Car Model</h1>
-							<p class="text-center">
-								Who are in extremely love with eco friendly system.
-							</p>
+
 						</div>
 					</div>
 					<div class="active-model-carusel">
@@ -30,7 +109,7 @@
 								<a class="text-uppercase primary-btn" href="/product/{{ rs.id }}/{{ rs.slug }}">Book This Car Now</a>
 							</div>
 							<div class="col-lg-6 model-right">
-								<img class="img-fluid" src="{{ rs.image.url }}" alt="" style="height: 300px">
+								<img class="img-fluid" src="{{ rs.image.url }}" alt="" style="height: 300px;width:500px">
 							</div>
 						</div>
 						{% endfor %}
