--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -1,37 +1,45 @@
 {% load static %}
 
 <header id="header" id="home">
-			    <div class="container">
-			    	<div class="row align-items-center justify-content-between d-flex">
-				      <div id="logo">
-				        <a href="/"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
-				      </div>
-				      <nav id="nav-menu-container">
-				        <ul class="nav-menu">
-							{% load mptt_tags %}
+	<div class="container">
+		<div class="row align-items-center justify-content-between d-flex">
+			<div id="logo">
+				<a href="/"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
+			</div>
+			<nav id="nav-menu-container">
+				<ul class="nav-menu">
+					{% load mptt_tags %}
 
-    {% recursetree category %}
-        <li class="menu-has-children"><a href="/category/{{ node.id }}/{{ node.slug }}">{{ node.title }}</a>
-
-
+					{% recursetree category %}
+					<li class="menu-has-children"><a href="/category/{{ node.id }}/{{ node.slug }}">{{ node.title }}</a>
 
 
-            {% if not node.is_leaf_node %}
-                <ul class="children">
-					<li><a href="/">{{ children }}</a></li>
-                </ul>
-            {% endif %}
-        </li>
-    {% endrecursetree %}
 
-				          <li class="menu-active"><a href="/">Home</a></li>
-				          <li><a href="/about">About</a></li>
-				          <li><a href="/contact">Contact</a></li>
-						  <li><a href="/sss">SSS</a></li>
-				        </ul>
-				      </nav><!-- #nav-menu-container -->
-			    	</div>
-			    </div>
 
-			  </header><!-- #header -->
+						{% if not node.is_leaf_node %}
+						<ul class="children">
+							<li><a href="/">{{ children }}</a></li>
+						</ul>
+						{% endif %}
+					</li>
+					{% endrecursetree %}
+
+					<li class="menu-active"><a href="/">Home</a></li>
+					<li><a href="/about">About</a></li>
+					<li><a href="/contact">Contact</a></li>
+					<li><a href="/sss">SSS</a></li>
+				</ul>
+			</nav><!-- #nav-menu-container -->
+		</div>
+	</div>
+
+	{% if messages %}
+	{% for message in messages %}
+	<div style="color: red; font-size: medium">
+		{{ message|safe }}
+	</div>
+	{% endfor %}
+	{% endif %}
+
+</header><!-- #header -->
 
