--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -67,7 +67,7 @@
 							{% endif %}
 							<ul class="custom-menu">
 								<li><a href="/user"><i class="fa fa-user-o"></i> My Account</a></li>
-								<li><a href="#"><i class="fa fa-exchange"></i> My Bookings</a></li>
+								<li><a href="/user/bookings"><i class="fa fa-exchange"></i> My Bookings</a></li>
 								<li><a href="/user/comments"><i class="fa fa-check"></i> My Comments</a></li>
 								<li><a href="/logout/"><i class="fa fa-unlock-alt"></i> Logout</a></li>
 							</ul>
@@ -104,7 +104,7 @@
 								</p>
 								<p>
 									{{ rs.description }}<br>
-									{{ rs.detail|safe }}
+
 								</p>
 								<a class="text-uppercase primary-btn" href="/product/{{ rs.id }}/{{ rs.slug }}">Book This Car Now</a>
 							</div>
