--- a/home/templates/products_search.html
+++ b/home/templates/products_search.html
@@ -36,7 +36,17 @@
 
 
 
+<div class="pull-left">
+	<div class="header-search">
+	<br><br>
+	<form action="/search/" method="post">
+		{% csrf_token %}
+		<input name="query" class="input search-input" type="text" placeholder="Enter your keyword">
+		<button class="search-btn"><i class="fa fa-search"></i></button>
+	</form>
 
+</div>
+</div>
 
 <div class="section">
 	<div class="container">
